[gd_scene load_steps=8 format=3 uid="uid://odkcfxm2ghvw"]

[ext_resource type="Script" path="res://game/cards/card.gd" id="1_17a0d"]
[ext_resource type="Texture2D" uid="uid://b6shrnj2bj5xh" path="res://game/cards/attack.svg" id="2_uh60j"]

[sub_resource type="FontVariation" id="FontVariation_ptpba"]

[sub_resource type="LabelSettings" id="LabelSettings_pya0l"]
font = SubResource("FontVariation_ptpba")
font_size = 90
font_color = Color(0.682353, 0.364706, 0.25098, 1)
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_2po00"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSprite/LeftUpperContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardSprite/RightButtomContainer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_k8anm"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSprite/LeftUpperContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3333, 0.6666, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardSprite/RightButtomContainer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3333, 0.6666, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [3.14159, 3.49066, 2.79253, 3.14159]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:value")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ih2no"]
_data = {
"RESET": SubResource("Animation_2po00"),
"hurt": SubResource("Animation_k8anm")
}

[node name="card" type="Node2D"]
script = ExtResource("1_17a0d")

[node name="CardSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_uh60j")

[node name="LeftUpperContainer" type="AspectRatioContainer" parent="CardSprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -193.0
offset_top = -267.0
offset_right = -386.0
offset_bottom = -535.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftUpperNumber" type="Label" parent="CardSprite/LeftUpperContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "1"
label_settings = SubResource("LabelSettings_pya0l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButtomContainer" type="AspectRatioContainer" parent="CardSprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 265.0
offset_right = -2.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
size_flags_vertical = 8

[node name="RightButtomNumber" type="Label" parent="CardSprite/RightButtomContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
text = "1"
label_settings = SubResource("LabelSettings_pya0l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ih2no")
}
